--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@
     left: 0;
     right: 0;
     z-index: 100;
-
-
 }
+
+.nav-container{
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 2rem;
+}
+   
