--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@
     z-index: -1;
     object-fit: cover;
     object-position: bottom;
-    
 }
    
 .mcdonaldsmockups {
@@ -34,5 +33,30 @@
     width: 100%;
     display: block;
     margin-top: 600px;
+}
 
+h2 {
+    font-family: Josefin Sans;
+    font-size: 50;
+    font-weight: 300;
+    color: white;
+    text-shadow:
+    2px 2px 4px rgba(0, 0, 0, 0.3),
+    1px 1px 2px rgba(0, 0, 0, 0.5);
+    position: relative;
+    top: 150px;
+    left: 150px;
+
+}
+
+.highlight {
+    color: #FFBF48
+}
+
+body {
+    overflow-x: hidden;
+}
+@font-face {
+    src: url(fonts/JosefinSans-VariableFont_wght.ttf);
+    font-family: 'Josefin Sans';
 }
