--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 .navbar{
     background-color: transparent;
     padding: 1rem 0;
@@ -16,36 +20,32 @@
     align-items: center;
     padding: 0 2rem;
 }
-
-.mouseingrass {
+.top-section{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    height: 100vh;
+}
+.mouseingrass{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 500px;
-    z-index: -1;
+    width:100%;
+    height:100%;
     object-fit: cover;
-    object-position: bottom;
-}
-   
-.mcdonaldsmockups {
-    height: auto;
-    width: 100%;
-    display: block;
-    margin-top: 600px;
 }
 
 h2 {
     font-family: Josefin Sans;
     font-size: 30px;
-    font-weight: 300;
+    font-weight: 500;
     color: white;
     text-shadow:
     2px 2px 4px rgba(0, 0, 0, 0.3),
     1px 1px 2px rgba(0, 0, 0, 0.5);
     position: relative;
-    top: 150px;
-    left: 150px;
+    top: 220px;
+    left: 80px;
 
 }
 
@@ -59,15 +59,86 @@ body {
 @font-face {
     src: url(fonts/JosefinSans-VariableFont_wght.ttf);
     font-family: 'Josefin Sans';
+
+}
+@font-face{
+    src:url(fonts/JosefinSlab-Italic-VariableFont_wght.ttf);
+    font-family: 'Josefin Slab';
+}
+@font-face{
+    src: url(fonts/jsMath-cmmi10.ttf);
+    font-family:'jsMath-cmmi10';
 }
 
 .portfolio {
-    letter-spacing: -3px;
+    letter-spacing: -9px;
+    color: #FFBF48;
+    font-weight: lighter;
+    font-size: 70px;
+    font-style: italic;
 }
 
-h1 {
-    font-size: 55px;
+.welcome {
+    font-family: Josefin Sans;
+    color: white;
+    font-size: 60px;
+    text-shadow:
+    2px 2px 4px rgba(0, 0, 0, 0.3),
+    1px 1px 2px rgba(0, 0, 0, 0.5);
     position: relative;
-    left: 140px;
-    top: 120px;
+    left: 80px;
+    top: 170px;
 }
+.letter-p{
+    font-family: jsMath-cmmi10;
+}
+.letter-o{
+    font-family: Josefin Sans;
+    font-weight: medium;
+}
+.letter-r{
+    font-family: Josefin Sans;
+    font-weight: 300;
+}
+.letter-t{
+    font-family: jsMath-cmmi10;
+}
+.letter-f{
+    font-family: jsMath-cmmi10;
+}
+.letter-o2{
+    font-family:Josefin Slab;
+    font-weight: 300;
+}
+.letter-l{
+    font-family:jsMath-cmmi10;
+}
+.letter-i{
+    font-family: Josefin Sans;
+    font-weight: medium;
+}
+.letter-o3{
+    font-family: jsMath-cmmi10;
+}
+.featured{
+    padding-left: 60px;
+}
+.featured-text{
+    color: black;
+    font-family: Josefin Sans;
+    font-weight: 600;
+    font-size: 35px;
+}
+.mcdonalds{
+    width: 95%;
+    height: 90vh;
+    overflow: hidden;
+    object-fit: cover;
+    object-position: center;
+
+}
+
+
+
+
+
