--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 html{
     scroll-behavior: smooth;
+    height: 100%;
+    margin: 0;
 }
 
 .navbar{
@@ -25,15 +27,16 @@ html{
     margin:0;
     padding:0;
     box-sizing: border-box;
-    height: 100vh;
+    overflow: hidden;
+    min-height: 100vh;
 }
 
 .mouseingrass{
     position: absolute;
-    top: 0;
-    left: 0;
+    inset: 0;
     width:100%;
     height:100%;
+    display: block;
     object-fit: cover;
 }
 
@@ -130,25 +133,20 @@ body {
     color: black;
     font-family: Josefin Sans;
     font-weight: 600;
-    font-size: 35px;
-    padding-left: 105px;
+    font-size: 40px;
+    padding-left: 30px;
+    padding-top: 20px;
 }
 
-.mcdonalds{
-    width:85%;
-    height: 80vh;
-    overflow: hidden;
+.featured-img{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    padding: 20px 0;
+}
+.featured-img img{
+    width:900px;
+    height:auto;
     object-fit: cover;
-    object-position: center;
-    margin: auto;
-    display: block; 
+    border-radius: 15px;
 }
-
-.hivespace{
-    
-}
-
-
-
-
-
