--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
 }
 
 .welcome {
-    font-family: Josefin Sans;
+    font-family: 'Josefin Sans';
     color: white;
     font-size: 60px;
     text-shadow:
@@ -98,40 +98,40 @@ body {
     top: 170px;
 }
 .letter-p{
-    font-family: jsMath-cmmi10;
+    font-family: 'jsMath-cmmi10';
 }
 .letter-o{
-    font-family: Josefin Sans;
+    font-family: 'Josefin Sans';
     font-weight: medium;
 }
 .letter-r{
-    font-family: Josefin Sans;
+    font-family: 'Josefin Sans';
     font-weight: 300;
 }
 .letter-t{
-    font-family: jsMath-cmmi10;
+    font-family: 'jsMath-cmmi10';
 }
 .letter-f{
-    font-family: jsMath-cmmi10;
+    font-family: 'jsMath-cmmi10';
 }
 .letter-o2{
-    font-family:Josefin Slab;
+    font-family: 'Josefin Slab';
     font-weight: 300;
 }
 .letter-l{
-    font-family:jsMath-cmmi10;
+    font-family:'jsMath-cmmi10';
 }
 .letter-i{
-    font-family: Josefin Sans;
+    font-family: 'Josefin Sans';
     font-weight: medium;
 }
 .letter-o3{
-    font-family: jsMath-cmmi10;
+    font-family: 'jsMath-cmmi10';
 }
 
 .featured-text{
     color: black;
-    font-family: Josefin Sans;
+    font-family: 'Josefin Sans';
     font-weight: 600;
     font-size: 40px;
     padding-left: 30px;
@@ -145,8 +145,25 @@ body {
     padding: 20px 0;
 }
 .featured-img img{
-    width:900px;
+    max-width:900px;
+    width: 100%;
     height:auto;
     object-fit: cover;
     border-radius: 15px;
 }
+
+/* .featured-heading{
+    font-family: 'Josefin Sans';
+    font-weight: bold;
+    font-size: 35px;
+    color: white;
+    position: relative;
+    text-shadow:
+    2px 2px 4px rgba(0, 0, 0, 0.3),
+    1px 1px 2px rgba(0, 0, 0, 0.5);
+    bottom: 20px;
+    left: 20px;
+    margin: 0;
+
+} */
+
